# diabetes-prediction

./: .gitignore  README.md  docker-compose.yml  metrics.dvc  mlartifacts.dvc  mlflow.db.dvc  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: build.yml
data/: raw.dvc
diabetes_prediction/: metrics.dvc  model.dvc
diabetes_prediction/config/: config.py
diabetes_prediction/mlflow/: shortlist.py
src/data/: prepared.dvc
src/diabetes_prediction/: evaluate.py  ingest.py  pipeline.py  predict.py  train.py  utils.py
src/diabetes_prediction/api/: Dockerfile  diabetes.py  main.py  requirements.txt
src/diabetes_prediction/app/: Dockerfile  api_client.py  requirements.txt  streamlit_app.py
src/diabetes_prediction/config/: config.py
src/diabetes_prediction/metrics/: metrics.json  sle_metrics.csv  test_metrics.json
src/diabetes_prediction/mlflow/: shortlist.py
src/diabetes_prediction/model/: model.joblib
tests/: test_predict.py
