[project]
name = "diabetes_prediction"
version = "0.1.0"
authors = [
  { name="babaksoft", email="babak.eslamieh@gmail.com" },
]
description = "ML Package for predicting the onset of diabetes"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/babaksoft/diabetes-prediction"
Issues = "https://github.com/babaksoft/diabetes-prediction/issues"

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"
