[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "diabetes-prediction"
version = "0.1.0"
description = "ML Package for predicting the onset of diabetes"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name="babaksoft", email="babak.eslamieh@gmail.com" },
]
keywords = ["machine learning", "classification"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
license-files = ["LICEN[CS]E*"]

dependencies = [
"numpy>=2.3.5",
"scipy>=1.16.3",
"pandas>=2.3.3",
"matplotlib>=3.10.7",
"scikit-learn>=1.7.2",
"seaborn>=0.13.2",
"pytest>=9.0.1",
"joblib>=1.5.2"
]

[project.urls]
Homepage = "https://github.com/babaksoft/diabetes-prediction"
Issues = "https://github.com/babaksoft/diabetes-prediction/issues"

[tool.hatch.build]
exclude = [
    "/.dvc",
    "**/*.dvc",
    "**/.gitignore",
    "/notebooks",
    "/tests",
    ".gitignore",
    ".dvcignore",
    "requirements.txt"
]
